Added DB connection, Notification model, repository.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
           entity_copy_observer: allow
     open-in-view: false # EXPLAIN_V ??????? ?? ???????? ?????????? ???? ?????? HTTP ??????
   liquibase:
-    enabled: true
+    enabled: false
     change-log: classpath:db/changelog/db-changelog.yml
   docker:
     compose:
@@ -109,11 +109,10 @@ grpc:
     GLOBAL:
       negotiationType: PLAINTEXT
     reader-server:
-      address: static://${SERVER_IP:localhost}:${SERVER_PORT:5002}
-
-grpc-server:
-  url: ${SERVER_IP:localhost}
-  port: ${SERVER_PORT:5002}
+      address: static://localhost:5005
+  server:
+    url: localhost
+    port: 5005
 
 ---
 
