ADD in k8s, REFACTOR

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
         username: ${SPRING_ADMIN_USER}
         password: ${SPRING_ADMIN_PASSWORD}
         instance:
+          prefer-ip: true
           metadata:
             # от server
             user:
@@ -53,10 +54,6 @@ spring:
       skip:
         in-test: false
 
-server:
-  port: 5002
-  max-http-header-size: 100000
-
 # Настройка Actuator
 management:
   info:
@@ -67,6 +64,8 @@ management:
       exposure:
         include: "*" # EXPLAIN_V Открыть у актуатора больше запросов для метрик
   metrics:
+    tags:
+      application: ${spring.application.name}
     export:
       prometheus:
         enabled: true
@@ -83,32 +82,10 @@ logging:
           jdbc:
             bind: TRACE
 
-openapi:
-  dev-url: http://localhost:5002
-
-springdoc:
-  show-login-endpoint: true
-  api-docs:
-    enabled: true
-    path: /apiDocs
-  swagger-ui:
-    enabled: true
-    path: /swagger
-    filter: true
-    tryItOutEnabled: true
-    tagsSorter: alpha
-    docExpansion: none
-    defaultModelsExpandDepth: 10
-
 grpc:
-  client:
-    GLOBAL:
-      negotiationType: PLAINTEXT
-    reader-server:
-      address: static://${GRPC_HOST}:5005
   server:
     url: ${GRPC_HOST}
-    port: 5005
+    port: 5002
 
 ---
 
@@ -128,10 +105,3 @@ logging:
         orm:
           jdbc:
             bind: INFO
-
-springdoc:
-  show-login-endpoint: false
-  api-docs:
-    enabled: false
-  swagger-ui:
-    enabled: false
